--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ enableGitInfo = false
 [params]
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`.
-  color_theme = "1950s"
+  color_theme = "1950sCoP"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
@@ -64,11 +64,11 @@ enableGitInfo = false
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "celiagp@kth.se, celia.garcia.pareja@ki.se"
-  address = "Lindstedtsvägen 25, Room 3413, KTH Royal Institute of Technology, Stockholm, SE-10044, Sweden"
+  address = "Lindstedtsvägen 25, Room 3413, Department of Mathematics, KTH Royal Institute of Technology, Stockholm, SE-10044, Sweden"
   #office_hours = "Monday 10:00 to 13:00 or email for appointment"
-  phone = "888 888 88 88"
-  skype = "echo123"
-  telegram = ""
+  phone = "+46 (0) 728 723 406"
+  #skype = "echo123"
+  #telegram = ""
 
   # Enable Keybase in Contact widget by entering your keybase.io username.
   keybase = ""
@@ -109,7 +109,7 @@ enableGitInfo = false
   time_format = "3:04 PM"
 
   # Show estimated reading time for posts?
-  reading_time = true
+  reading_time = false
 
   # Display comment count? Requires commenting to be enabled.
   comment_count = true
@@ -226,22 +226,27 @@ enableGitInfo = false
   [[params.social]]
     icon = "envelope"
     icon_pack = "fa"
-    link = "mailto:test@example.org"
-
-  [[params.social]]
-    icon = "twitter"
+    link = "mailto:celiagp@kth.se"
+    
+    [[params.social]]
+    icon = "linkedin"
     icon_pack = "fa"
-    link = "//twitter.com/GeorgeCushen"
+    link = "https://se.linkedin.com/in/celia-garc%C3%ADa-pareja-9ba8b2133"
 
   [[params.social]]
+    icon = "researchgate"
+    icon_pack = "ai"
+    link = "https://www.researchgate.net/profile/Celia_Garcia-Pareja"
+    
+    [[params.social]]
     icon = "google-scholar"
     icon_pack = "ai"
-    link = "https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ"
+    link = "https://scholar.google.com/citations?user=zJrOUJYAAAAJ"
 
   [[params.social]]
     icon = "github"
     icon_pack = "fa"
-    link = "//github.com/gcushen"
+    link = "//github.com/celiagp"
 
 
 # Navigation Links
@@ -259,17 +264,17 @@ enableGitInfo = false
 
 [[menu.main]]
   name = "Publications"
-  url = "#publications_selected"
+  url = "#publications"
   weight = 2
-
+  
 [[menu.main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Talks"
+  url = "#talks"
   weight = 3
-
+  
 [[menu.main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Grants"
+  url = "#grants"
   weight = 4
 
 [[menu.main]]
